<resources>
    <string name="app_name">Chez Jo</string>
    <string name="nom_even">Nom de l evenement</string>
    <string name="date_even">Date de l evenement</string>
    <string name="heure_even">Heure de l evenement</string>
    <string name="descrip_even">Description de l evenement</string>
    <string name="valid">Valider</string>
    <string name="retour">Retour</string>
    <string name="quitter">Quitter</string>
    <string name="text_bouton1">Creer un evenement</string>
    <string name="text_bouton2">Guide d utilisation</string>
    <string name="nom">Nom :   </string>
    <string name="date">Date :   </string>
    <string name="description">Description :   </string>
    <string name="probleme">Erreur, veuillez reessayer</string>
    <string name="problemeEven">Evenement non charge</string>
    <string name="envoi">Envoyer</string>
    <string name="texteSms">Texte à envoyer</string>
    <string name="texteErreurSms">Vous devez entrer un texte</string>

    <string-array name="options">
        <item>Modification des invites</item>
        <item>Envoi de sms</item>
        <item>Fin de l Evenement</item>
    </string-array>


    <string name="aide">Ceci est le manuel d utilisation de l application au cas ou vous seriez pas tres malin</string>

</resources>
