<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ensai.proj.SmsManuel">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/boutonRetourSms"
        android:layout_alignParentBottom="true">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="retour"
        android:text="@string/retour"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/boutonEnvoiSms"
        android:layout_above="@id/boutonRetourSms">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="envoi"
        android:text="@string/envoi"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/boutonEnvoiSms">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/texteSms"
        android:id="@+id/texteSms"/>

    </LinearLayout>

</RelativeLayout>
